Sort ConversationInfo by descending updatedAt