@@ -10,7 +10,11 @@ import com.senla.project.repository.AdRepository;
 import com.senla.project.repository.ConversationRepository;
 import com.senla.project.repository.UserRepository;
 import com.senla.project.service.ConversationService;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
 import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
@@ -37,9 +41,14 @@ public class ConversationServiceImpl implements ConversationService {
   @Override
   public List<ConversationInfoResponse> getConversationsOfUser(long userId) {
     List<Conversation> conversations = conversationRepository.findByBuyerIdOrSellerId(userId);
-    return conversations.stream()
+
+    List<ConversationInfoResponse> conversationInfoResponses = conversations.stream()
         .map(conversationMapper::mapToConversationInfoResponse)
-        .collect(Collectors.toList());
+        .toList();
+
+    sortConversationInfoResponses(conversationInfoResponses);
+
+    return conversationInfoResponses;
   }
 
   @Override
@@ -86,6 +95,18 @@ public class ConversationServiceImpl implements ConversationService {
 
     return conversation.getInitiator().getId() == userId
         || conversation.getReceiver().getId() == userId;
+  }
+
+  private void sortConversationInfoResponses(List<ConversationInfoResponse> conversationInfoResponses) {
+    Collections.sort(conversationInfoResponses, Comparator.comparing(ConversationInfoResponse::getUpdatedAt, (s1, s2) -> {
+      try {
+        return new SimpleDateFormat("dd-MM-yyyy HH:mm").parse(s2).compareTo(
+            new SimpleDateFormat("dd-MM-yyyy HH:mm").parse(s1));
+      } catch (ParseException e) {
+        e.printStackTrace();
+        return 0;
+      }
+    }));
   }
 
 }
